update card class to display block to fix name alignment issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -183,6 +183,10 @@ footer i {
     padding-bottom: 20px;
 }
 
+.card {
+    display: block;
+}
+
 /* Reviews page */
 
 .set-vertical-align {
